AO3-4629 Fix stray space causing alignment issues with chapter and download menus
TODO: Check the mobile version

--- a/public/stylesheets/site/2.0/08-actions.css
+++ b/public/stylesheets/site/2.0/08-actions.css
@@ -258,6 +258,7 @@ for :has() increases to 95% according to caniuse.com. */
 
 .javascript .work.navigation .secondary {
   position: absolute;
+  top: 1.911em; /* 0.375em * 2 for top and bottom padding + 1.286em for height + .25em to compensate for borders which are set in pixels */
   right: 0;
     align-items: center;
     gap: 0 0.643em;
